@@ -24,4 +24,6 @@ $conf['scayt_lang'] = "American English/en_US";
 $conf['smiley_hack'] = 0;
 $conf['complex_tables'] = 0;
 $conf['duplicate_notes'] = 0;
+$conf['dw_priority'] = 0;
+
 
